tests/cases/parser/literals/characters/empty.stderr
error: empty character literal
 --> $DIR/empty.hash:3:2
2 |   
3 |   '';
  |    ^ expected a character literal here
